--- a/app/src/main/res/layout/fragment_chat_detail.xml
+++ b/app/src/main/res/layout/fragment_chat_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_smoke"
-    tools:context=".Activities.Main.Fragment.Profile.ProfileChatFragment">
+    tools:context=".Activities.Main.Fragment.Chat.ChatDetailFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,6 +27,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_arrow_back_white"/>
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/avatar"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_user_white"
+                        android:layout_marginStart="16dp"/>
                     <TextView
                         android:id="@+id/name"
                         android:layout_width="wrap_content"
