--- a/app/src/main/res/layout/fragment_main_chat.xml
+++ b/app/src/main/res/layout/fragment_main_chat.xml
@@ -3,18 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Main.Fragment.MainChatFragment">
+    tools:context=".Activities.Main.Fragment.Chat.MainChatFragment">
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/fragment_main_chat_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Chat"
-            android:gravity="center_horizontal|center_vertical"/>
-    </LinearLayout>
-
+        android:layout_gravity="center" />
 
 </FrameLayout>
