--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,14 +8,53 @@
     android:background="@color/purple"
     android:gravity="center">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="40dp"/>
+        android:src="@drawable/splash_activity_background"
+        android:foreground="@drawable/splash_foreground">
 
-    <!--Maybe a loading dialog or something here ?-->
+    </ImageView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_gravity="top"
+            android:text="@string/app_name"
+            android:layout_marginTop="50dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:fontFamily="@font/lobster"
+            android:textSize="55sp" />
+        <ImageView
+            android:layout_marginTop="50dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginEnd="90dp"
+
+            android:src="@drawable/splash_icon"
+
+            >
+
+        </ImageView>
+
+        <ProgressBar
+
+            android:layout_marginTop="90dp"
+            android:id="@+id/splashScreen_ProgressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 
 </RelativeLayout>
