--- a/app/src/main/res/layout/pop_up_address.xml
+++ b/app/src/main/res/layout/pop_up_address.xml
@@ -32,7 +32,7 @@
 
             <TextView
                 android:layout_marginTop="10dp"
-                android:id="@+id/dishTitle"
+                android:id="@+id/addressTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="marquee"
@@ -62,6 +62,7 @@
                 android:layout_height="match_parent"
                 android:gravity="bottom">
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/setDefaultBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
