--- a/app/src/main/res/layout/pop_up_address.xml
+++ b/app/src/main/res/layout/pop_up_address.xml
@@ -17,11 +17,12 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/dishImageView"
+                android:id="@+id/addressImageView"
                 android:layout_width="150dp"
                 android:scaleType="centerCrop"
                 android:layout_margin="8dp"
                 android:layout_height="200dp"
+                android:src="@drawable/address_holder"
                 />
         </LinearLayout>
 
