--- a/app/src/main/res/layout/fragment_register_vehicle.xml
+++ b/app/src/main/res/layout/fragment_register_vehicle.xml
@@ -64,191 +64,207 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardElevation="4dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Vehicle"
+                        android:layout_marginVertical="16dp"
                         android:fontFamily="@font/lobster"
-                        android:textSize="30sp"
-                        android:textStyle="bold"
+                        android:text="Vehicle"
                         android:textAlignment="center"
-                        android:layout_marginVertical="16dp"/>
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
                         android:text="Please enter your vehicle detail. \nYou can edit this in the app later."
-                        android:textSize="16sp"
-                        android:layout_marginHorizontal="16dp"/>
+                        android:textSize="16sp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:padding="5dp"
                         android:text="Brand"
                         android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:padding="5dp"
-                        android:layout_marginHorizontal="16dp"
-                        />
+                        android:textStyle="bold" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardElevation="4dp"
                         android:layout_marginHorizontal="16dp"
                         android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp">
+                        app:cardCornerRadius="30dp"
+                        app:cardElevation="4dp">
+
                         <EditText
                             android:id="@+id/vehicle_brand_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Brand"
                             android:background="@drawable/custom_edit_text"
+                            android:hint="Brand"
                             android:padding="10dp"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
                     </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:padding="5dp"
                         android:text="Name"
                         android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:layout_marginHorizontal="16dp"
-                        android:padding="5dp"/>
+                        android:textStyle="bold" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardElevation="4dp"
                         android:layout_marginHorizontal="16dp"
                         android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp">
+                        app:cardCornerRadius="30dp"
+                        app:cardElevation="4dp">
+
                         <EditText
                             android:id="@+id/vehicle_name_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Name"
                             android:background="@drawable/custom_edit_text"
+                            android:hint="Name"
                             android:padding="10dp"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
                     </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:padding="5dp"
                         android:text="Color"
                         android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:layout_marginHorizontal="16dp"
-                        android:padding="5dp"/>
+                        android:textStyle="bold" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardElevation="4dp"
                         android:layout_marginHorizontal="16dp"
                         android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp">
+                        app:cardCornerRadius="30dp"
+                        app:cardElevation="4dp">
+
                         <EditText
                             android:id="@+id/vehicle_color_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Color"
                             android:background="@drawable/custom_edit_text"
+                            android:hint="Color"
                             android:padding="10dp"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
                     </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:padding="5dp"
                         android:text="Seat Capacity"
                         android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:layout_marginHorizontal="16dp"
-                        android:padding="5dp"/>
+                        android:textStyle="bold" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardElevation="4dp"
                         android:layout_marginHorizontal="16dp"
                         android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp">
+                        app:cardCornerRadius="30dp"
+                        app:cardElevation="4dp">
 
                         <Spinner
                             android:id="@+id/seat_capacity_spinner"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Seat Capacity"
                             android:background="@drawable/custom_edit_text"
-                            android:textSize="18sp"
+                            android:hint="Seat Capacity"
                             android:paddingHorizontal="8dp"
-                            android:paddingVertical="10dp"/>
+                            android:paddingVertical="10dp"
+                            android:textSize="18sp" />
                     </androidx.cardview.widget.CardView>
 
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Number Plate"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
                         android:layout_marginHorizontal="16dp"
                         android:padding="5dp"
-                        />
+                        android:text="Number Plate"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:padding="5dp"
                         android:text="Ex: 50-K 12345"
                         android:textSize="16sp"
-                        android:textStyle="italic"
-                        android:layout_marginHorizontal="16dp"
-                        android:padding="5dp"/>
+                        android:textStyle="italic" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardElevation="4dp"
                         android:layout_marginHorizontal="16dp"
                         android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp">
+                        app:cardCornerRadius="30dp"
+                        app:cardElevation="4dp">
+
                         <EditText
                             android:id="@+id/vehicle_number_plate_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Number Plate"
                             android:background="@drawable/custom_edit_text"
+                            android:hint="Number Plate"
                             android:padding="10dp"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
                     </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginVertical="8dp"
                         android:text="Image"
                         android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginVertical="8dp"/>
+                        android:textStyle="bold" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardElevation="4dp"
                         android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="65dp">
+                        android:layout_marginBottom="20dp"
+                        app:cardElevation="4dp">
+
                         <ImageView
                             android:id="@+id/vehicle_image_view"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_image"/>
+                            android:src="@drawable/ic_image" />
                     </androidx.cardview.widget.CardView>
+
+                    <LinearLayout
+                        android:id="@+id/img_upload_success"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginBottom="45dp">
+
+                    </LinearLayout>
 
                     <Button
                         android:id="@+id/done_button"
@@ -256,7 +272,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="16dp"
                         android:layout_marginBottom="48dp"
-                        android:text="Done"/>
+                        android:text="Done" />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
