--- a/app/src/main/res/layout/fragment_home_list.xml
+++ b/app/src/main/res/layout/fragment_home_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Main.EditActivity.EditAddressActivity"
+    tools:context=".HomeListFragment"
     android:orientation="vertical">
 
     <ImageView
@@ -45,5 +45,5 @@
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:padding="10dp"
-        android:onClick="newVehicle"/>
+        />
 </LinearLayout>
