--- a/app/src/main/res/layout/pop_up_address_form.xml
+++ b/app/src/main/res/layout/pop_up_address_form.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
+    <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="20dp"
@@ -9,9 +13,11 @@
     android:layout_marginHorizontal="20dp"
     android:padding="16dp"
     >
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/cancelBtn"
@@ -33,7 +39,8 @@
         android:fontFamily="@font/lobster"
         android:textStyle="bold"
         android:gravity="center"
-        android:textSize="25sp">
+        android:textSize="25sp"
+       >
 
     </TextView>
         <TextView
@@ -44,13 +51,13 @@
             android:layout_marginTop="20dp"
             android:textStyle="bold"
             android:layout_marginHorizontal="16dp"
-            android:padding="5dp"/>
+            android:padding="5dp"
+            />
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="4dp"
         android:layout_marginHorizontal="16dp"
-
         app:cardCornerRadius="30dp">
         <EditText
             android:id="@+id/address_edit_text"
@@ -72,7 +79,8 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginHorizontal="16dp"
-            android:padding="5dp"/>
+            android:padding="5dp"
+            />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -90,12 +98,13 @@
         android:id="@+id/submitNewAddressBtn"
         android:layout_gravity="bottom"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
+        android:layout_marginBottom="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="Submit" />
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
 
 
