--- a/app/src/main/res/layout/activity_driver_chat.xml
+++ b/app/src/main/res/layout/activity_driver_chat.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_smoke"
-    tools:context=".Activities.Main.Fragment.Chat.ChatDetailFragment">
-
+    tools:context=".DriverChatActivity"
+    android:orientation="vertical">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -81,5 +81,5 @@
                 android:backgroundTint="@android:color/transparent"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+</LinearLayout>
 
-</FrameLayout>
