--- a/app/src/main/res/layout/fragment_home_list.xml
+++ b/app/src/main/res/layout/fragment_home_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeListFragment"
+    tools:context=".Activities.Main.Fragment.Profile.Edit.HomeListFragment"
     android:orientation="vertical">
 
     <ImageView
