--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Activities.Main.Fragment.Profile.ProfileEditFragment">
+    tools:context=".Activities.Main.Fragment.Profile.Edit.ProfileEditFragment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
