--- a/app/src/main/res/layout/fragment_vehicle_list.xml
+++ b/app/src/main/res/layout/fragment_vehicle_list.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Main.EditActivity.EditVehicleActivity"
+    tools:context=".Activities.Main.Fragment.Profile.Edit.VehicleListFragment"
     android:orientation="vertical">
 
     <ImageView
@@ -48,4 +47,5 @@
         android:onClick="newVehicle">
 
     </Button>
+
 </LinearLayout>
