--- a/app/src/main/res/layout/user_vehicle_card_view.xml
+++ b/app/src/main/res/layout/user_vehicle_card_view.xml
@@ -9,16 +9,16 @@
     android:layout_margin="8dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/vehicleImageView"
-                android:layout_width="150dp"
+                android:layout_width="200dp"
                 android:scaleType="centerCrop"
                 android:layout_margin="8dp"
                 android:layout_height="200dp"
@@ -26,14 +26,14 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
-                android:id="@+id/vehicleName"
+                android:id="@+id/vehiclePlate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="marquee"
@@ -75,9 +75,27 @@
 
                 </com.google.android.material.button.MaterialButton>
             </LinearLayout>
-
-
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/edit_button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Edit"
+                    android:layout_weight="1"
+                    android:layout_marginRight="8dp"
+                    android:backgroundTint="@color/quantum_googgreen"/>
+                <Button
+                    android:id="@+id/delete_button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Delete"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="8dp"
+                    android:backgroundTint="@color/light_orange_red"/>
+            </LinearLayout>
 
         </LinearLayout>
 
