--- a/app/src/main/res/layout/fragment_confirm_booking.xml
+++ b/app/src/main/res/layout/fragment_confirm_booking.xml
@@ -352,7 +352,7 @@
                     android:id="@+id/next_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="next"
+                    android:text="Next"
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginBottom="20dp"/>
             </LinearLayout>
