--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -209,7 +209,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/defaultAddress"
+                        android:id="@+id/address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -266,7 +266,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/defaultVehicle"
+                        android:id="@+id/vehicle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -298,6 +298,7 @@
                     android:textStyle="bold" />
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/defaultSOSCardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardElevation="4dp"
@@ -321,16 +322,15 @@
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
 
-                            <EditText
+                            <TextView
                                 android:id="@+id/sos_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Name"
                                 android:padding="10dp"
                                 android:layout_marginLeft="5dp"
-                                android:background="@drawable/custom_edit_text"
                                 android:layout_weight="1">
-                            </EditText>
+                            </TextView>
 
                             <ImageView
                                 android:layout_width="50dp"
